# ariplay-receiver

./: .gitignore  .gitmodules  README.md  local.properties  settings.gradle.kts
.claude/: settings.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/airplayreceiverunai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  airplay_jni.cpp  dnssd_android.c  xplist_stub.c
app/src/main/java/com/example/airplayreceiverunai/: AirPlayBridge.kt  AirPlayCallback.kt  AirPlayDecoder.kt  AirPlayNsdService.kt  MainActivity.kt
app/src/main/res/drawable/: bg_gradient.xml  circle_icon_bg.xml  ic_airplay.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ring_pulse.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/airplayreceiverunai/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
